fix: restore PDP service drawer layout broken by unscoped ruby CSS rules

--- a/assets/side-drawer.css
+++ b/assets/side-drawer.css
@@ -254,17 +254,21 @@ side-drawer .drawer__close svg {
   stroke-width: 1;
 }
 
-side-drawer .drawer__body {
+#side-drawer-ruby-signature .drawer__body {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
 
 side-drawer .drawer__content-wrapper {
-  padding: 0px;
+  padding: 40px;
   flex: 1;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+}
+
+#side-drawer-ruby-signature .drawer__content-wrapper {
+  padding: 0px;
 }
 
 side-drawer .drawer-content__main {
@@ -821,6 +825,10 @@ side-drawer[aria-hidden="false"] .drawer__underlay {
 
 @media only screen and (max-width: 749px) {
   side-drawer .drawer__content-wrapper {
+    padding: 20px;
+  }
+
+  #side-drawer-ruby-signature .drawer__content-wrapper {
     padding: 0px;
   }
 
